--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "test": "mocha"
   },
   "dependencies": {
-    "chalk": "^1.1.0",
-    "extend": "^3.0.0"
+    "extend": "^3.0.0",
+    "gulp-util": "^3.0.6"
   },
   "devDependencies": {
     "babel": "^5.8.19",
