Make use of babel-runtime

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "mocha"
   },
   "dependencies": {
+    "babel-runtime": "^5.8.20",
     "extend": "^3.0.0",
     "gulp-util": "^3.0.6"
   },
