Add keywords to NPM package

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "type": "git",
     "url": "https://github.com/rumps/"
   },
+  "keywords": [
+    "gulp",
+    "rump",
+    "rump-module"
+  ],
   "scripts": {
     "codecov": "npm run coverage",
     "postcodecov": "codecov < coverage/coverage.json",
