--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "license": "MIT",
   "homepage": "https://github.com/rumps/",
   "main": "./lib",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rumps/"
-  },
+  "repository": "rumps/",
   "keywords": [
     "gulp",
     "rump",
